--- a/views/index.erb
+++ b/views/index.erb
@@ -2,7 +2,7 @@
 <html class="no-js" dir="ltr" lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Yaakov Gamliel</title>
+    <title>Yasha Gamliel</title>
 
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
 
@@ -36,7 +36,7 @@
       <div class="card">
         <section class="front">
           <hgroup>
-            <h1>Yaakov Gamliel</h1>
+            <h1>Yasha Gamliel</h1>
 
             <h2>iOS and Web Developer</h2>
           </hgroup>
@@ -48,7 +48,7 @@
               <aside></aside>
 
               <hgroup>
-                <h1>Yaakov Gamliel</h1>
+                <h1>Yasha Gamliel</h1>
 
                 <h2>iOS and Web Developer</h2>
               </hgroup>
@@ -58,7 +58,7 @@
               <dt>Email</dt>
 
               <dd>
-				  bob[at]gmail.com
+				  yasha[at]gmail.com
               </dd>
             </dl>
 
