got my email fixed

--- a/views/index.erb
+++ b/views/index.erb
@@ -2,13 +2,13 @@
 <html class="no-js" dir="ltr" lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Yasha Gamliel</title>
+    <title>&#089;&#097;&#097;&#107;&#111;&#118;&#032;&#071;&#097;&#109;&#108;&#105;&#101;&#108;</title>
 
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
 
-    <meta name="author" content="Yaakov Gamliel">
+    <meta name="author" content="&#089;&#097;&#097;&#107;&#111;&#118;&#032;&#071;&#097;&#109;&#108;&#105;&#101;&#108;">
     <meta name="description" content="iOS and Web Developer">
-    <meta name="keywords" content="ios,workgroups,teaching.objective-c,ruby on rails,node.js,sinatra">
+    <meta name="keywords" content="iOS,freelance,workgroups,teaching Objective-C,Objective-C,Ruby,ruby on rails,node.js,sinatra,sinatra.rb,NSStuff,">
 
     <link href="/favicon.ico" rel="shortcut icon">
 
@@ -36,7 +36,7 @@
       <div class="card">
         <section class="front">
           <hgroup>
-            <h1>Yasha Gamliel</h1>
+            <h1>&#089;&#097;&#097;&#107;&#111;&#118;&#032;&#071;&#097;&#109;&#108;&#105;&#101;&#108;</h1>
 
             <h2>iOS and Web Developer</h2>
           </hgroup>
@@ -48,7 +48,7 @@
               <aside></aside>
 
               <hgroup>
-                <h1>Yasha Gamliel</h1>
+                <h1>&#089;&#097;&#097;&#107;&#111;&#118;&#032;&#071;&#097;&#109;&#108;&#105;&#101;&#108;</h1>
 
                 <h2>iOS and Web Developer</h2>
               </hgroup>
@@ -58,8 +58,7 @@
               <dt>Email</dt>
 
               <dd>
-				  yasha[at]gmail.com
-              </dd>
+ <a class="email" href="&#121;&#097;&#097;&#107;&#111;&#118;&#103;&#097;&#109;&#108;&#105;&#101;&#108;&#064;&#109;&#101;&#046;&#099;&#111;&#109;">&#121;&#097;&#097;&#107;&#111;&#118;&#103;&#097;&#109;&#108;&#105;&#101;&#108;&#064;&#109;&#101;&#046;&#099;&#111;&#109;</a>              </dd>
             </dl>
 
             <dl>
