--- a/views/index.erb
+++ b/views/index.erb
@@ -58,14 +58,14 @@
               <dt>Email</dt>
 
               <dd>
- <a class="email" href="&#121;&#097;&#097;&#107;&#111;&#118;&#103;&#097;&#109;&#108;&#105;&#101;&#108;&#064;&#109;&#101;&#046;&#099;&#111;&#109;">&#121;&#097;&#097;&#107;&#111;&#118;&#103;&#097;&#109;&#108;&#105;&#101;&#108;&#064;&#109;&#101;&#046;&#099;&#111;&#109;</a>              </dd>
+ <a class="email" href="&#121;&#097;&#097;&#107;&#111;&#118;&#064;&#115;&#101;&#114;&#103;&#097;&#116;&#097;&#046;&#109;&#111;&#098;&#105;">&#121;&#097;&#097;&#107;&#111;&#118;&#064;&#115;&#101;&#114;&#103;&#097;&#116;&#097;&#046;&#109;&#111;&#098;&#105;</a>              </dd>
             </dl>
 
             <dl>
               <dt>Address</dt>
 
               <dd>
-                <a href="http://www.g2think.com/">G2think, Inc.</a><br>
+                <a href="http://www.sergata.com/">Sergata Mobile.</a><br>
                 <br>
                
               </dd>
