--- a/views/index.erb
+++ b/views/index.erb
@@ -58,7 +58,7 @@
               <dt>Email</dt>
 
               <dd>
- <a class="email" href="&#121;&#097;&#097;&#107;&#111;&#118;&#064;&#115;&#101;&#114;&#103;&#097;&#116;&#097;&#046;&#109;&#111;&#098;&#105;">&#121;&#097;&#097;&#107;&#111;&#118;&#064;&#115;&#101;&#114;&#103;&#097;&#116;&#097;&#046;&#109;&#111;&#098;&#105;</a>              </dd>
+ <a class="email" href="&#109;&#097;&#105;&#108;&#116;&#111;&#058;&#121;&#097;&#097;&#107;&#111;&#118;&#064;&#115;&#101;&#114;&#103;&#097;&#116;&#097;&#046;&#109;&#111;&#098;&#105;">&#121;&#097;&#097;&#107;&#111;&#118;&#064;&#115;&#101;&#114;&#103;&#097;&#116;&#097;&#046;&#109;&#111;&#098;&#105;</a>              </dd>
             </dl>
 
             <dl>
