added my twitter account

--- a/views/index.erb
+++ b/views/index.erb
@@ -8,7 +8,7 @@
 
     <meta name="author" content="&#089;&#097;&#097;&#107;&#111;&#118;&#032;&#071;&#097;&#109;&#108;&#105;&#101;&#108;">
     <meta name="description" content="iOS and Web Developer">
-    <meta name="keywords" content="iOS,freelance,workgroups,teaching Objective-C,Objective-C,Ruby,ruby on rails,node.js,sinatra,sinatra.rb,NSStuff,">
+    <meta name="keywords" content="iOS,freelance,workgroups,teaching Objective-C,Objective-C,Ruby,ruby on rails,node.js,sinatra,sinatra.rb,NSStuff,Sergata Mobile">
 
     <link href="/favicon.ico" rel="shortcut icon">
 
@@ -76,7 +76,7 @@
 
               <dd>
                 <ul class="social">
-                  <li class="twitter"><a href="http://twitter.com/">Twitter</a></li>
+                  <li class="twitter"><a href="http://twitter.com/yaakov_g">Twitter</a></li>
 
                   <li class="facebook"><a href="http://facebook.com/">Facebook</a></li>
                 </ul>
